--- a/Entities/Industry/CTFShops/CTFCosts.cfg
+++ b/Entities/Industry/CTFShops/CTFCosts.cfg
@@ -54,7 +54,8 @@
 	cost_catapult                   = 80
 	cost_ballista                   = 200
 	cost_ballista_ammo              = 50
-	cost_ballista_ammo_upgrade_gold = 100
+	cost_ballista_ammo_explosive    = 100
+	cost_ballista_ammo_upgrade_gold = 100 # OLD
 
 	#quarters
 	cost_beer                       = 5
